# browser

./: CMakeLists.txt  GITHUB_ACTIONS_SETUP.md  Readme.md  build.bat  build.sh  build_cmake.sh
.github/workflows/: build.yml
src/: browser_styles.hpp  browser_tab_label.cpp  browser_tab_label.hpp  browser_toolbar.cpp  browser_toolbar.hpp  browser_window.cpp  browser_window.hpp  main.cpp  url_utils.cpp  url_utils.hpp
src/core/: browser_config.hpp  browser_tab.cpp  browser_tab.hpp  browser_window.cpp  browser_window.hpp
src/ui/: about_dialog.cpp  about_dialog.hpp  browser_tab_label.cpp  browser_tab_label.hpp  browser_toolbar.cpp  browser_toolbar.hpp
src/utils/: url_utils.cpp
